// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`download-button => без текста (только иконка) 1`] = `
<lego-components_button
  classname="download-button"
  disabled="false"
  icon="function (className) {
            return /*#__PURE__*/_react.default.createElement(_download.default, {
              iconSize: \\"m\\",
              cls: className
            });
          }"
  onclick="function () { [native code] }"
/>
`;

exports[`download-button => в процессе получения ссылки на скачивание 1`] = `
<lego-components_button
  classname="download-button"
  disabled="false"
  onclick="function () { [native code] }"
>
  Скачать
</lego-components_button>
`;

exports[`download-button => вирусный файл 1`] = `
<lego-components_button
  classname="download-button"
  disabled="false"
>
  Скачать
</lego-components_button>
`;

exports[`download-button => дефолтное состояние 1`] = `
<lego-components_button
  classname="download-button"
  disabled="false"
  onclick="function () { [native code] }"
>
  Скачать
</lego-components_button>
`;

exports[`download-button => для альбома ("Скачать всё") 1`] = `
<lego-components_button
  classname="download-button"
  disabled="false"
  onclick="function () { [native code] }"
>
  Скачать всё
</lego-components_button>
`;

exports[`download-button => для вложенной папки ("Скачать") 1`] = `
<lego-components_button
  classname="download-button"
  disabled="false"
  onclick="function () { [native code] }"
>
  Скачать
</lego-components_button>
`;

exports[`download-button => для корневой папки ("Скачать всё") 1`] = `
<lego-components_button
  classname="download-button"
  disabled="false"
  onclick="function () { [native code] }"
>
  Скачать всё
</lego-components_button>
`;

exports[`download-button => с иконкой 1`] = `
<lego-components_button
  classname="download-button"
  disabled="false"
  iconleft="function (className) {
            return /*#__PURE__*/_react.default.createElement(_download.default, {
              iconSize: \\"m\\",
              cls: className
            });
          }"
  onclick="function () { [native code] }"
>
  Скачать
</lego-components_button>
`;
